--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -25,4 +25,15 @@
 .chosen-container-active .chosen-single div b {
   background-position: -18px 7px !important;
 }
+
+.table-align-middle tbody tr td {
+  vertical-align: middle !important;
+}
+
+.input-sm,
+.form-control-sm {
+  height: 31px;
+  line-height: 1.5;
+  font-size: small;
+}
 /*# sourceMappingURL=custom-style.css.map */
