--- a/sass/custom-style.scss
+++ b/sass/custom-style.scss
@@ -49,3 +49,11 @@
   line-height: 1.5;
   font-size: small;
 }
+
+.d-flex {
+  display: flex;
+}
+
+.align-items-center {
+  align-items: center;
+}
