--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -36,4 +36,16 @@
   line-height: 1.5;
   font-size: small;
 }
+
+.d-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.align-items-center {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 /*# sourceMappingURL=custom-style.css.map */
