--- a/sass/custom-style.scss
+++ b/sass/custom-style.scss
@@ -54,6 +54,78 @@
   display: flex;
 }
 
+.justify-content-between {
+  justify-content: space-between;
+}
+
 .align-items-center {
   align-items: center;
+}
+
+.flex-grow-1 {
+  flex-grow: 1;
+}
+
+.alert {
+  &-icon {
+    padding: unset;
+    display: flex;
+
+    .icon {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0 15px;
+
+      i {
+        font-size: 16px;
+      }
+    }
+
+    .text {
+      padding: 15px;
+      background-color: #fff;
+      width: 100%;
+      border-top-right-radius: inherit;
+      border-bottom-right-radius: inherit;
+    }
+  }
+}
+
+.ibox-chanels {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  overflow: hidden;
+
+  .ibox {
+    &-content {
+      border: unset;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &-footer {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #EFF3F6;
+    }
+  }
+}
+
+.tabs-settings {
+  .nav.nav-tabs li {
+    margin-right: 15px;
+    font-weight: bold;
+
+    &.active a {
+      border: 1px solid #e7eaec;
+      border-radius: 4px;
+
+      &:hover {
+        border: 1px solid #e7eaec;
+        border-radius: 4px;
+      }
+    }
+  }
 }
