--- a/sass/custom-style.scss
+++ b/sass/custom-style.scss
@@ -118,14 +118,44 @@
     margin-right: 15px;
     font-weight: bold;
 
+    a {
+      background-color: white;
+    }
+
     &.active a {
       border: 1px solid #e7eaec;
       border-radius: 4px;
+      background-color: #1ab394;
+      color: white;
+
+      &::before {
+        content: '\25B8';
+        margin-right: 5px;
+      }
 
       &:hover {
         border: 1px solid #e7eaec;
         border-radius: 4px;
       }
+    }
+  }
+
+  .tab-content .ibox {
+    position: static;
+    width: 80%;
+    margin-left: 20%;
+    clear: unset;
+
+    .ibox-title {
+      color: #1ab394;
+
+      i {
+        margin-right: 5px;
+      }
+    }
+
+    .ibox-content {
+      clear: unset;
     }
   }
 }
